--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,8 @@
-*.cs linguist-language=C#
+
+*.cs linguist-language=CSharp
+
+*.shader linguist-vendored
+*.hlsl linguist-vendored
+*.cginc linguist-vendored
+*.compute linguist-vendored
+*.meta linguist-detectable=false
