--- a/.gitattributes
+++ b/.gitattributes
@@ -1,8 +1,1 @@
-
-*.cs linguist-language=CSharp
-
-*.shader linguist-vendored
-*.hlsl linguist-vendored
-*.cginc linguist-vendored
-*.compute linguist-vendored
-*.meta linguist-detectable=false
+*.cs linguist-language=C#
