--- a/.gitattributes
+++ b/.gitattributes
@@ -1,15 +1,13 @@
-# C# files
-*.cs linguist-language=CSharp
-
-# Ignore shader files and Unity meta files
-*.shader linguist-vendored
-*.hlsl linguist-vendored
-*.cginc linguist-vendored
-*.compute linguist-vendored
-*.meta linguist-detectable=false
-
-# Exclude Unity-specific files
-*.mat linguist-language=Text
-*.asset linguist-language=Text
-*.prefab linguist-language=Text
-
+*.cs linguist-language=C# 
+*.unity linguist-language=Text
+*.meta linguist-language=Text
+*.shader linguist-language=Text 
+*.cginc linguist-language=Text 
+*.dll linguist-vendored
+*.exe linguist-vendored
+*.pdf linguist-vendored
+*.so linguist-vendored
+*.jar linguist-vendored
+*.a linguist-vendored
+*.lib linguist-vendored
+*.obj linguist-vendored
